# JEvalOps

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: evaluation.yml  tests.yml
checkpoints/rinna_japanese_gpt2_small_lora/: adapter_config.json  training_metrics.json
checkpoints/rinna_japanese_gpt2_small_lora_mps/: README.md  adapter_config.json  training_metrics.json
configs/: evaluation.yaml  training.yaml
configs/models/: model_a.yaml  model_b.yaml  model_c.yaml
data/: dataset_card.md  test.jsonl  train.jsonl  validation.jsonl
data/processed/: sft_train.jsonl
demo/: app.py
reports/: baseline_report.md  baseline_results.json  error_analysis.json  error_analysis.md  fine_tuning_report.md
reports/rinna_lora/: fine_tuning_report.md  fine_tuning_results.json  hf_baseline_results.json  lora_results.json
reports/rinna_lora_mps/: fine_tuning_report.md  fine_tuning_results.json  hf_baseline_results.json  lora_results.json
reports/rinna_lora_mps_full/: fine_tuning_report.md  fine_tuning_results.json  hf_baseline_results.json  lora_results.json
scripts/: build_dataset.py  evaluate_lora_adapter.py  generate_report.py  generate_synthetic_data.py  run_baseline.py  run_error_analysis.py  run_finetuning_experiment.py  run_regression.py  train_lora.py
src/jevalops/: __init__.py
src/jevalops/analysis/: __init__.py  error_analysis.py  reporting.py  taxonomy.py
src/jevalops/api/: main.py
tests/: test_backends.py  test_deduplication.py  test_hardware.py  test_metrics.py  test_schema.py  test_training.py
(+29 files in other folders)
